# python-tks

./: .env.example  .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml  requirements.txt  run_once.bat  run_scheduler.bat
.github/workflows/: tushare-tasks.yml
DDL/: 001_create_moneyflow_cnt_ths.sql  001_create_moneyflow_cnt_ths_d1.sql  002_create_moneyflow_ind_dc.sql  002_create_moneyflow_ind_dc_d1.sql  004_create_moneyflow.sql  004_create_moneyflow_d1.sql  005_create_moneyflow_dc.sql  005_create_moneyflow_dc_d1.sql  006_create_moneyflow_ths.sql  006_create_moneyflow_ths_d1.sql  007_create_daily.sql  007_create_daily_d1.sql  008_create_ths_index.sql  008_create_ths_index_d1.sql  009_create_dc_index.sql  009_create_dc_index_d1.sql
data/stock_basic/: stock_basic.json
src/: config.py  main.py  read_daily.py  read_moneyflow.py  read_moneyflow_cnt_ths.py  read_moneyflow_dc.py  read_moneyflow_ind_dc.py  read_moneyflow_ths.py  read_utils.py  scheduler.py  strategy_runner.py  tushare_client.py  utils.py
src/core/: models.py
src/db/: client.py  d1.py  sqlite.py
src/localdebug/: README.md  __init__.py  common.py  run_daily_month.py  run_dc_index_to_sqlite.py  run_moneyflow_tasks_to_sqlite.py  run_ths_index_to_sqlite.py  sync_daily_d1_to_sqlite.py
src/repositories/: base.py  daily_repository.py  dc_index_repository.py  moneyflow_cnt_ths_repository.py  moneyflow_dc_repository.py  moneyflow_ind_dc_repository.py  moneyflow_repository.py  moneyflow_ths_repository.py  ths_index_repository.py
src/screening/: result_store.py
src/storage/: __init__.py  json_store.py
(+15 files in other folders)
